# kiro-radar

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
.kiro/specs/sample-spec-parser/: design.md  requirements.md  tasks.md
.kiro/specs/sample-ui-dashboard/: design.md  requirements.md  tasks.md
.kiro/specs/spec-detail-view/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/: app.rs  events.rs  main.rs  ui.rs
src/spec/: finder.rs  mod.rs  parser.rs  reader.rs
