[package]
name = "kiro-radar"
version = "0.1.0"
description = "A TUI dashboard for tracking Spec-Driven Development progress in AWS Kiro IDE."
authors = ["mzkmnk <mzk.mnk.dev@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"

[dev-dependencies]
tempfile = "3.23.0"
