[package]
name = "kiro-radar"
version = "0.1.0"
description = "A TUI dashboard for tracking Spec-Driven Development progress in AWS Kiro IDE."
authors = ["mzkmnk <mzk.mnk.dev@gmail.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/mzkmnk/kiro-radar"
homepage = "https://github.com/mzkmnk/kiro-radar"
documentation = "https://docs.rs/kiro-radar"
readme = "README.md"
keywords = ["tui", "dashboard", "spec", "kiro", "development"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23.0"
